--- a/client/src/bower.json
+++ b/client/src/bower.json
@@ -2,17 +2,18 @@
   "name": "yoAngular",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "latest",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-bootstrap": "~0.4.0",
-    "angular-ui-utis": "latest",
+    "angular-ui-utils": "latest",
     "angular-ui-router": "latest",
+    "bootstrap-sass": "~2.3.1",
     "es5-shim": "~2.0.8",
     "json3": "~3.2.4",
     "jquery": "~1.9.1",
-    "bootstrap-sass": "~2.3.1",
+    "lodash": "latest",
     "skrollr": "latest"
   },
   "devDependencies": {
