--- a/client/src/bower.json
+++ b/client/src/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "yoAngular",
+  "name": "dtangl",
   "version": "0.0.0",
   "dependencies": {
     "angular": "latest",
@@ -10,6 +10,7 @@
     "angular-ui-utils": "latest",
     "angular-ui-router": "latest",
     "bootstrap-sass": "~2.3.1",
+    "caman": "latest",
     "es5-shim": "~2.0.8",
     "json3": "~3.2.4",
     "jquery": "~1.9.1",
